--- a/tsconfig.json
+++ b/tsconfig.json
@@ -47,7 +47,7 @@
     // "noResolve": true,                                /* Disallow 'import's, 'require's or '<reference>'s from expanding the number of files TypeScript should add to a project. */
 
     /* JavaScript Support */
-    // "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
+    "allowJs": true,                                  /* Allow JavaScript files to be a part of your program. Use the 'checkJS' option to get errors from these files. */
     // "checkJs": true,                                  /* Enable error reporting in type-checked JavaScript files. */
     // "maxNodeModuleJsDepth": 1,                        /* Specify the maximum folder depth used for checking JavaScript files from 'node_modules'. Only applicable with 'allowJs'. */
 
@@ -110,5 +110,10 @@
     "skipLibCheck": true,                                 /* Skip type checking all .d.ts files. */
 
     "removeComments": true/* 是否去除注释 */
-  }
+  },
+  "include": [
+    "./src",
+    "./HelperLib/src",
+    "./Tab"
+  ]
 }
