--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "prettier.semi": true,
     "prettier.tabWidth": 4,
     "prettier.printWidth": 9999999,
-    "extension.llseaids.reloadCommand": "ll reload \"OPTools\""
+    "extension.llseaids.reloadCommand": "ll reload \"OPTools\"",
+    "workbench.colorTheme": "Default Dark Modern"
 }
